# sanamos

./: .gitignore  MANIFEST.in  Makefile  README.md  __init__.py  main  main.c  pyproject.toml  setup.py  suffix_array.c  suffix_array.h  suffix_array.py
src/sanamos/: Makefile  __init__.py  sanamos.py  suffix_array.c  suffix_array.h
src/suffix_array/: __init__.py  sa.c  sa.h
suffix_array/: __init__.py  sa.c  sa.h  suffix_array.py
tests/: test_sa.py
