[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project]
name = "sanamos"
version = "0.1.0"
description = "suffix array implementation in C with python wrapper for fast motif search in nucleic acid sequences"
authors = [
  { name = "Markus Haak", email = "markus.haak@posteo.de" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = ["pytest", "numpy", "Biopython"]

[project.urls]
Homepage = "https://github.com/MarkusHaak/sanamos"
Issues = "https://github.com/MarkusHaak/sanamos/issues"